# ferrous

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  disk.img  hello.txt  large_file.txt
assignments/assignment-1-threads/crates/ferrous-fs/: Cargo.toml
assignments/assignment-1-threads/crates/ferrous-kernel/src/fs/: mod.rs
assignments/assignment-1-threads/crates/ferrous-kernel/src/sync/: mod.rs
assignments/assignment-1-threads/crates/ferrous-kernel/src/thread/: mod.rs  scheduler.rs  syscalls.rs  tcb.rs
assignments/assignment-1-threads/crates/ferrous-runtime/src/: loader.rs
assignments/assignment-1-threads/crates/ferrous-vm/src/: memory.rs
assignments/assignment-1-threads/examples/file-read/src/: main.rs
assignments/assignment-1-threads/examples/hello-world/src/: main.rs
assignments/assignment-1-threads/examples/hello/src/: main.rs
assignments/assignment-2-sync/crates/ferrous-kernel/src/: syscall.rs
assignments/assignment-2-sync/crates/ferrous-kernel/src/sync/: syscalls.rs
assignments/assignment-2-sync/crates/ferrous-vm/src/: instruction.rs
assignments/assignment-2-sync/crates/xtask/: Cargo.toml
assignments/assignment-3-vm/crates/ferrous-kernel/: Cargo.toml
assignments/assignment-3-vm/crates/ferrous-kernel/src/: memory.rs  syscall.rs
assignments/assignment-3-vm/crates/ferrous-kernel/src/fs/: block.rs
assignments/assignment-3-vm/crates/ferrous-kernel/src/process/: mod.rs
assignments/assignment-3-vm/crates/ferrous-test/: Cargo.toml
assignments/assignment-3-vm/crates/ferrous-user/src/: sync.rs
assignments/assignment-3-vm/crates/ferrous-vm/src/: cpu.rs  mmu.rs
assignments/assignment-3-vm/crates/ferrous-vm/src/devices/: uart.rs
assignments/assignment-3-vm/crates/xtask/src/: main.rs
assignments/assignment-3-vm/examples/disk-read/: Cargo.toml  build.rs
assignments/assignment-3-vm/examples/echo/src/: main.rs
assignments/assignment-4-process/: Cargo.toml
assignments/assignment-4-process/crates/ferrous-kernel/src/: error.rs  syscall.rs
assignments/assignment-4-process/crates/ferrous-kernel/src/process/: syscalls.rs
assignments/assignment-4-process/crates/ferrous-kernel/src/sync/: syscalls.rs
assignments/assignment-4-process/crates/ferrous-kernel/src/thread/: tcb.rs
assignments/assignment-4-process/crates/ferrous-user/: Cargo.toml
assignments/assignment-4-process/crates/ferrous-vm/: Cargo.toml
assignments/assignment-4-process/examples/file-read/: Cargo.toml
assignments/assignment-4-process/examples/shell/: Cargo.toml
assignments/assignment-4-process/examples/threads/: Cargo.toml
assignments/assignment-5-fs/crates/ferrous-kernel/src/fs/: mod.rs
assignments/assignment-5-fs/crates/ferrous-kernel/src/process/: syscalls.rs
assignments/assignment-5-fs/crates/ferrous-mkfs/src/: main.rs
assignments/assignment-5-fs/crates/ferrous-vm/src/: system_bus.rs
assignments/assignment-5-fs/examples/disk-read/src/: main.rs
assignments/assignment-5-fs/examples/echo/: Cargo.toml
assignments/assignment-5-fs/examples/hello/: Cargo.toml
assignments/assignment-5-fs/examples/hello-world/: Cargo.toml
assignments/assignment-5-fs/examples/sbrk/: Cargo.toml
assignments/assignment-6-net/: Cargo.toml  README.md
assignments/assignment-6-net/crates/ferrous-kernel/: Cargo.toml
assignments/assignment-6-net/crates/ferrous-kernel/src/: lib.rs  memory.rs  syscall.rs
assignments/assignment-6-net/crates/ferrous-kernel/src/fs/: mod.rs  syscalls.rs
assignments/assignment-6-net/crates/ferrous-kernel/src/net/: driver.rs  ipv4.rs  socket.rs  syscalls.rs  udp.rs
assignments/assignment-6-net/crates/ferrous-kernel/src/sync/: mod.rs  spinlock.rs
assignments/assignment-6-net/crates/ferrous-kernel/src/thread/: tcb.rs
assignments/assignment-6-net/crates/ferrous-runtime/: Cargo.toml
assignments/assignment-6-net/crates/ferrous-runtime/src/: lib.rs
assignments/assignment-6-net/crates/ferrous-user/src/: lib.rs  net.rs
assignments/assignment-6-net/crates/ferrous-vm/src/: error.rs  mmu.rs
assignments/assignment-6-net/crates/ferrous-vm/src/devices/: mod.rs  net.rs
assignments/assignment-6-net/crates/xtask/src/: main.rs
assignments/assignment-6-net/examples/net-test/: Cargo.toml
assignments/assignment-6-net/examples/net-test/src/: main.rs
crates/ferrous-cli/: Cargo.toml
crates/ferrous-cli/src/: main.rs
crates/ferrous-fs/src/: lib.rs
crates/ferrous-kernel/: Cargo.toml
crates/ferrous-kernel/src/: error.rs  lib.rs  memory.rs  sync.rs  syscall.rs  types.rs
crates/ferrous-kernel/src/fs/: block.rs  mod.rs  syscalls.rs
crates/ferrous-kernel/src/net/: driver.rs  mod.rs  socket.rs  syscalls.rs
crates/ferrous-kernel/src/process/: syscalls.rs
crates/ferrous-kernel/src/sync/: spinlock.rs  syscalls.rs
crates/ferrous-kernel/src/thread/: mod.rs  scheduler.rs  syscalls.rs  tcb.rs
crates/ferrous-mkfs/: Cargo.toml
crates/ferrous-mkfs/src/: main.rs
crates/ferrous-runtime/src/: lib.rs  loader.rs
crates/ferrous-user/src/: lib.rs  net.rs  sync.rs
crates/ferrous-vm/: Cargo.toml
crates/ferrous-vm/src/: cpu.rs  error.rs  instruction.rs  lib.rs  memory.rs  system_bus.rs  time.rs  trap.rs
crates/ferrous-vm/src/devices/: block.rs  mod.rs  net.rs  uart.rs
crates/xtask/src/: main.rs
docs/: SYLLABUS_TEMPLATE.md
docs/instructors/: PEDAGOGY.md  TA_HANDBOOK.md
docs/students/: ARCHITECTURE.md  GETTING_STARTED.md
examples/disk-read/src/: main.rs
examples/echo/: link.ld
examples/hello-world/src/: main.rs
examples/net_test/: Cargo.toml
examples/net_test/src/: main.rs
examples/sbrk/src/: main.rs
examples/shell/src/: main.rs
examples/threads/: memory.x
examples/threads/src/: main.rs
tools/udp-echo/: Cargo.toml
tools/udp-echo/src/: main.rs
