[workspace]
resolver = "2"
members = [
    "crates/ferrous-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Production
log = "0.4.29"
thiserror = "2.0.18"

# Development
env_logger = "0.11.8"

# Internal workspace crates
ferrous-vm = { path = "crates/ferrous-vm" }
